multi_index_map_derive2/tests/ui/extra_arguments.stderr
error: #[multi_index(...)] requires exactly one index kind
 --> tests/ui/extra_arguments.rs:5:5
  |
5 |     #[multi_index(hashed_unique, ordered_unique)]
  |     ^

error: MultiIndexMap2 requires at least one #[multi_index(...)] field
 --> tests/ui/extra_arguments.rs:4:8
  |
4 | struct ExtraArguments {
  |        ^^^^^^^^^^^^^^
